# advent-of-code

./: .gitmodules
2015/src/: lib.rs
2016/: day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py  day-08.py  day-09.py  day-10.py  day-11.py  lib.py
2017/: go.mod
2017/day01/: main.go
2017/day02/: day02.go  main.go
2017/day03/: main.go
2017/day04/: main.go
2017/day05/: main.go
2017/day06/: main.go
2017/day07/: main.go
2017/day08/: main.go
2017/day09/: main.go
2017/day10/: main.go
2017/day11/: main.go
2017/day12/: main.go
2017/day13/: main.go
2017/day14/: main.go
2017/day15/: main.go
2017/day16/: main.go
2017/day17/: main.go
2017/day18/: main.go
2017/lib/: lib.go
2017/test/: 15.txt
2019/: .gitignore  Aoc_2019.opam  Cargo.toml  Package.swift  dune-project
2019/lib/: common.ml  common.mli  dune  intcode.ml  intcode.mli  lib.ml  lib.mli
2019/src/: lib.rs
2019/test/: dune
2020/: .gitignore  package-lock.json  package.json  tsconfig.json
2021/: aoc-2021.sln
2021/day-01/: Program.cs  day-01.csproj
2021/day-02/: AimPosition.cs  Instruction.cs  Position.cs  Program.cs  day-02.csproj
2021/day-03/: Program.cs  day-03.csproj
2021/day-04/: Board.cs  Program.cs  day-04.csproj
2021/day-05/: Line.cs  Map.cs  Point.cs  (+2 more)
2022-kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
2022_ocaml/: .gitignore  aoc_2022_ocaml.opam  dune-project
2022_ocaml/lib/: aoc.ml
2023/: .gitignore  CMakeLists.txt  Cargo.toml
2024/: package-lock.json  package.json  tsconfig.json
2025/: Cargo.toml
(+128 files in other folders)
