(lang dune 3.10)

(name aoc_2022_ocaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Kurt Braun")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc_2022_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml (>= "5.0.0")) dune ppx_deriving)
 (tags
  (topics "to describe" your project)))
